--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CSS-Grid Anime </title>
+  <title>Gopalasu Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;900&family=Roboto+Mono&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
   <!--Nav bar start-->
   <nav class="navbar navbar-expand-lg p-0">
     <div class="container-fluid ">
-      <a class="navbar-brand bg-dark text-white  p-2   fs-2 fw-bold text-uppercase" href="#">ANIME</a>
+      <a class="navbar-brand bg-dark text-white  p-2   fs-2 fw-bold text-uppercase" href="#">GOPALASU</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
